# snake_game_project

./: CMakeLists.txt  main.cpp
Apple/: Apple-snake_interaction.cpp  Apple-snake_interaction.hpp  Apple.cpp  Apple.hpp
Player/: Collision.cpp  Collision.hpp  Snake.cpp  Snake.hpp
